cleaned up files

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
   {% unless site.plugins contains "jekyll-seo-tag" %}
-    <title>{{ page.title | flatify }} - {{ site.title }}</title>
+    <title>{{ page.title | flatify }} - {{ site.title | flatify }}</title>
 
     {% if page.description %}
       <meta name="Description" content="{{ page.description }}">
